# filmaddict-backend

./: .gitignore  DATABASE_CONNECTION.md  Dockerfile  add_thumbnail_column.py  add_timeline_thumbnail_column.py  backfill_timeline_thumbnails.py  check_env.py  check_feedback.py  configure_s3_cors.py  configure_s3_cors.sh  database.py  delete_all_videos.py  extract_chrome_cookies.py  get_cookies_ytdlp.py  main.py  models.py  pyproject.toml  requirements.txt  test_db_connection.py  worker.py  youtube_cookies.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_learning_tables.py  003_add_clip_feedback_features.py  004_add_online_calibration_fields.py  005_add_prompt_version_rolling_metrics.py  006_add_highlight_summary.py  007_add_video_aspect_ratio.py  2ff6e4a1d3a8_change_default_aspect_ratio_to_16_9.py  431434e1f47e_rename_ratings_to_confidence_scores.py  (+15 more)
db/: crud.py  models.py
jobs/: learning_job.py  process_video.py
scripts/: configure_s3_cors.py
utils/: audio.py  clips.py  colab_processor.py  colab_vjepa2.py  explanation_builder.py  filler_detection.py  fluff_detection.py  highlights.py  jobs.py  learning.py  learning_logger.py  llm_fallback.py  model_loader.py  moment_scoring.py  moments.py  preview_cache.py  redis_cache.py  repetition_detection.py  retention_scoring.py  segment_length_normalizer.py  segment_scoring.py  semantic_segmentation.py  sentence_start.json  silence_detection.py  storage.py  timecode.py  transcription.py  transcription_whisper.py  video_cache.py  video_cutter.py  video_export.py  visual_analysis.py  youtube.py
