[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filmaddict-backend"
version = "0.1.0"
description = "Highlight Extractor SaaS Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "openai>=1.3.0",
    "supabase>=2.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "yt-dlp>=2023.12.0",
    "ffmpeg-python>=0.2.0",
    "boto3>=1.34.0",
    "rq>=1.15.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools]
packages = ["db", "jobs", "utils"]

[tool.setuptools.package-data]
"*" = ["*.py"]

